--- a/templates/team.html
+++ b/templates/team.html
@@ -13,27 +13,59 @@
       <input type="text" id="name" name="name" value="{{ team.name }}" /><br />
 
       <label for="country">Страна:</label>
-      <input type="text" id="country" name="country" value="{{ team.country }}" /><br />
+      <input
+        type="text"
+        id="country"
+        name="country"
+        value="{{ team.country }}"
+      /><br />
 
       <label for="city">Город:</label>
       <input type="text" id="city" name="city" value="{{ team.city }}" /><br />
 
       <label for="coach">Тренер:</label>
-      <input type="text" id="coach" name="coach" value="{{ team.coach }}" /><br />
+      <input
+        type="text"
+        id="coach"
+        name="coach"
+        value="{{ team.coach }}"
+      /><br />
 
       <label for="points">Очки:</label>
-      <input type="number" id="points" name="points" value="{{ team.points }}" /><br />
+      <input
+        type="number"
+        id="points"
+        name="points"
+        value="{{ team.points }}"
+      /><br />
 
       <label for="games-count">Количество игр:</label>
-      <input type="number" id="games-count" name="games_count" value="{{ team.games_count }}" /><br />
+      <input
+        type="number"
+        id="games-count"
+        name="games_count"
+        value="{{ team.games_count }}"
+      /><br />
 
-      <label for="tituls">Титулы:</label>
-      <div id="tituls-container">
-        {% for titul in all_tituls %}
+      <label for="titles">Титулы:</label>
+      <div id="titles-container">
+        {% for title in all_titles %}
         <label>
-          <input type="checkbox" name="tituls" value="{{ titul.id }}" {% if titul in team.tituls.all %}checked{% endif %} />
-          {{ titul.name }}
-        </label><br />
+          <input
+            type="checkbox"
+            name="titles"
+            value="{{ title.id }}"
+            {%
+            if
+            title
+            in
+            team.titles.all
+            %}checked{%
+            endif
+            %}
+          />
+          {{ title.name }} </label
+        ><br />
         {% endfor %}
       </div>
       <br />
