feat: configure titles view

--- a/templates/titles.html
+++ b/templates/titles.html
@@ -8,7 +8,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="{% static 'css/styles.css' %}"
+      href="{% static 'css/titles.css' %}"
     />
   </head>
   <body>
@@ -35,7 +35,6 @@
       </tbody>
     </table>
 
-    <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
-    <script src="{% static 'js/title_list.js' %}"></script>
+    <script src="{% static 'js/titles.js' %}"></script>
   </body>
 </html>
