--- a/static/css/games.css
+++ b/static/css/games.css
@@ -42,3 +42,8 @@ tr:nth-child(even) {
     margin: 4px 2px;
     cursor: pointer;
 }
+body {
+    background-image: url('static/images/game_bg.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
