--- a/templates/register.html
+++ b/templates/register.html
@@ -40,5 +40,9 @@
     </form>
     <br />
     <a href="{% url 'login' %}">Уже зарегистрированы? Войти</a>
+    {% if error %}
+    <script>
+      alert("{{ error }}");
+    </script>{% endif %}
   </body>
 </html>
