--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
   <body>
     <form method="post" action="{% url 'login' %}">
       {% csrf_token %}
-      <h1>{% if error %} {{ error }} {% else %} Авторизация {% endif %}</h1>
+      <h1>Авторизация</h1>
       <label for="username">Имя пользователя:</label>
       <input type="text" id="username" name="username" />
 
@@ -26,5 +26,10 @@
         >Зарегистрироваться</a
       >
     </form>
+    {% if error %}
+    <script>
+      alert("{{ error }}");
+    </script>
+    {% endif %}
   </body>
 </html>
