--- a/templates/main.html
+++ b/templates/main.html
@@ -1,23 +1,16 @@
-{% load static %}
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Меню</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}" />
-  </head>
-  <body>
-    <div class="container">
-      <h1>Меню</h1>
-      <div class="buttons">
-        <a href="/titles/" class="title-btn">Все титулы</a>
-        <a href="/titles/create/" class="title-btn">Создать титул</a>
-        <a href="/teams/" class="team-btn">Все команды</a>
-        <a href="/teams/create/" class="team-btn">Создать команду</a>
-        <a href="/games/" class="game-btn">Все матчи</a>
-        <a href="/games/create/" class="game-btn">Создать матч</a>
-        <a href="/table/" class="table-btn">Турнирная таблица</a>
-      </div>
-    </div>
-  </body>
-</html>
+{% extends 'base.html' %} {% load static %} {% block title %}Меню{% endblock %}
+{% block styles %}{{ block.super }}
+<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}" />
+{% endblock %} {% block content %}
+
+<h1>Меню</h1>
+<div class="buttons">
+  <a href="{% url 'titles-list' %}" class="title-btn">Все титулы</a>
+  <a href="{% url 'titles-create' %}" class="title-btn">Создать титул</a>
+  <a href="{% url 'teams-list' %}" class="team-btn">Все команды</a>
+  <a href="{% url 'teams-create' %}" class="team-btn">Создать команду</a>
+  <a href="{% url 'games-list' %}" class="game-btn">Все матчи</a>
+  <a href="{% url 'game-create' %}" class="game-btn">Создать матч</a>
+  <a href="{% url 'table' %}" class="table-btn">Турнирная таблица</a>
+</div>
+{% endblock %} {% block scripts %}{{ block.super }} {% endblock %}
