--- a/templates/games/games_list.html
+++ b/templates/games/games_list.html
@@ -1,44 +1,39 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Список матчей</title>
-    <link rel="stylesheet" href="{% static 'css/games.css' %}" />
-  </head>
-  <body>
-    <h1>Список матчей</h1>
-    <table>
-      <thead>
-        <tr>
-          <th>Дата матча</th>
-          <th>Команда 1</th>
-          <th>Команда 2</th>
-          <th>Главный судья</th>
-          <th>Результат</th>
-          <th>Действия</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for game in games %}
-        <tr>
-          <td>{{ game.date_of_the_match }}</td>
-          <td>{{ game.teams.all.0.name }}</td>
-          <td>{{ game.teams.all.1.name }}</td>
-          <td>{{ game.main_judge }}</td>
-          <td>{{ game.result|default_if_none:"-" }}</td>
-          <td>
-            <button class="details-button" data-game-id="{{ game.id }}">
-              Подробнее
-            </button>
-            <button class="delete-button" data-game-id="{{ game.id }}">
-              Удалить
-            </button>
-          </td>
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-    <script src="{% static 'js/games.js' %}"></script>
-  </body>
-</html>
+{% extends 'base.html' %} {% load static %} {% block title %}Список матчей{%
+endblock %} {% block styles %}{{ block.super }}
+<link rel="stylesheet" href="{% static 'css/games.css' %}" />
+{% endblock %} {% block content %}
+<h1>Список матчей</h1>
+<table>
+  <thead>
+    <tr>
+      <th>Дата матча</th>
+      <th>Команда 1</th>
+      <th>Команда 2</th>
+      <th>Главный судья</th>
+      <th>Результат</th>
+      <th>Действия</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for game in games %}
+    <tr>
+      <td>{{ game.date_of_the_match }}</td>
+      <td>{{ game.teams.all.0.name }}</td>
+      <td>{{ game.teams.all.1.name }}</td>
+      <td>{{ game.main_judge }}</td>
+      <td>{{ game.result|default_if_none:"-" }}</td>
+      <td>
+        <button class="details-button" data-game-id="{{ game.id }}">
+          Подробнее
+        </button>
+        <button class="delete-button" data-game-id="{{ game.id }}">
+          Удалить
+        </button>
+      </td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+{% endblock %} {% block scripts %}{{ block.super }}
+<script src="{% static 'js/games.js' %}"></script>
+{% endblock %}
