--- a/templates/teams/team.html
+++ b/templates/teams/team.html
@@ -1,76 +1,67 @@
-{% load static %}
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Команда</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/team.css' %}" />
-    <script src="{% static 'js/team.js' %}"></script>
-  </head>
-  <body>
-    <h1>Информация о команде</h1>
-    <form id="team-form">
-      <label for="name">Название команды:</label>
-      <input type="text" id="name" name="name" value="{{ team.name }}" /><br />
+{% extends 'base.html' %} {% load static %}
+{% block title %}Команда{% endblock%}
+{% block styles %}{{ block.super }}
+<link rel="stylesheet" type="text/css" href="{% static 'css/team.css' %}" />
+<script src="{% static 'js/team.js' %}"></script>
+{% endblock %} {% block content %}
+<h1>Информация о команде</h1>
+<form id="team-form">
+  <label for="name">Название команды:</label>
+  <input type="text" id="name" name="name" value="{{ team.name }}" /><br />
 
-      <label for="country">Страна:</label>
+  <label for="country">Страна:</label>
+  <input
+    type="text"
+    id="country"
+    name="country"
+    value="{{ team.country }}"
+  /><br />
+
+  <label for="city">Город:</label>
+  <input type="text" id="city" name="city" value="{{ team.city }}" /><br />
+
+  <label for="coach">Тренер:</label>
+  <input type="text" id="coach" name="coach" value="{{ team.coach }}" /><br />
+
+  <label for="points">Очки:</label>
+  <input
+    type="number"
+    id="points"
+    name="points"
+    value="{{ team.points }}"
+  /><br />
+
+  <label for="games-count">Количество игр:</label>
+  <input
+    type="number"
+    id="games-count"
+    name="games_count"
+    value="{{ team.games_count }}"
+  /><br />
+
+  <label for="titles">Титулы:</label>
+  <div id="titles-container">
+    {% for title in all_titles %}
+    <label>
       <input
-        type="text"
-        id="country"
-        name="country"
-        value="{{ team.country }}"
-      /><br />
+        type="checkbox"
+        name="titles"
+        value="{{ title.id }}"
+        {%
+        if
+        title
+        in
+        team.titles.all
+        %}checked{%
+        endif
+        %}
+      />
+      {{ title.name }} </label
+    ><br />
+    {% endfor %}
+  </div>
+  <br />
 
-      <label for="city">Город:</label>
-      <input type="text" id="city" name="city" value="{{ team.city }}" /><br />
-
-      <label for="coach">Тренер:</label>
-      <input
-        type="text"
-        id="coach"
-        name="coach"
-        value="{{ team.coach }}"
-      /><br />
-
-      <label for="points">Очки:</label>
-      <input
-        type="number"
-        id="points"
-        name="points"
-        value="{{ team.points }}"
-      /><br />
-
-      <label for="games-count">Количество игр:</label>
-      <input
-        type="number"
-        id="games-count"
-        name="games_count"
-        value="{{ team.games_count }}"
-      /><br />
-
-      <label for="titles">Титулы:</label>
-      <div id="titles-container">
-        {% for title in all_titles %}
-        <label>
-          <input
-            type="checkbox"
-            name="titles"
-            value="{{ title.id }}"
-            {%
-            if
-            title
-            in
-            team.titles.all
-            %}checked{%
-            endif
-            %}
-          />
-          {{ title.name }} </label
-        ><br />
-        {% endfor %}
-      </div>
-      <br />
-
-      <input type="submit" value="Сохранить" />
-    </form>
-  </body>
-</html>
+  <input type="submit" value="Сохранить" />
+</form>
+{% endblock %} {% block scripts %}{{ block.super }} {% endblock %}
