--- a/templates/titles/titles_list.html
+++ b/templates/titles/titles_list.html
@@ -1,40 +1,30 @@
-{% load static %}
-
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Список титулов</title>
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'css/titles.css' %}"
-    />
-  </head>
-  <body>
-    <h1>Список титулов</h1>
-    <table>
-      <thead>
-        <tr>
-          <th>Название титула</th>
-          <th>Действия</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for title in titles %}
-        <tr>
-          <td>{{ title.name }}</td>
-          <td>
-            <a class="button" href="/titles/{{ title.id }}">Подробнее</a>
-            <button class="button delete-button" data-title-id="{{ title.id }}">
-              Удалить
-            </button>
-          </td>
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-
-    <script src="{% static 'js/titles.js' %}"></script>
-  </body>
-</html>
+{% extends 'base.html' %} {% load static %}
+{% block title %}Список титулов{%endblock %}
+{% block styles %}{{ block.super }}
+<link rel="stylesheet" type="text/css" href="{% static 'css/titles.css' %}" />
+{% endblock %} {% block content %}
+<h1>Список титулов</h1>
+<table>
+  <thead>
+    <tr>
+      <th>Название титула</th>
+      <th>Действия</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for title in titles %}
+    <tr>
+      <td>{{ title.name }}</td>
+      <td>
+        <a class="button" href="/titles/{{ title.id }}">Подробнее</a>
+        <button class="button delete-button" data-title-id="{{ title.id }}">
+          Удалить
+        </button>
+      </td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+{% endblock %} {% block scripts %}{{ block.super }}
+<script src="{% static 'js/titles.js' %}"></script>
+{% endblock %}
