--- a/static/css/title.css
+++ b/static/css/title.css
@@ -1,47 +1,46 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #F5F5F5;
-  }
+.title-container {
+  margin: 50px auto;
+  width: 50%;
+}
 
-  h1 {
-    font-size: 36px;
-    margin-bottom: 20px;
-  }
+h1 {
+  font-size: 32px;
+  text-align: center;
+}
 
-  form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #FFFFFF;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.25);
-  }
+form {
+  background-color: #f7f7f7;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
+}
 
-  label {
-    font-size: 20px;
-    margin-bottom: 10px;
-  }
+label {
+  display: block;
+  margin-bottom: 10px;
+}
 
-  input[type="text"] {
-    padding: 5px 10px;
-    font-size: 20px;
-    border-radius: 5px;
-    border: none;
-    margin-bottom: 20px;
-  }
+input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.2);
+  margin-bottom: 20px;
+}
 
-  input[type="submit"] {
-    padding: 10px 20px;
-    font-size: 20px;
-    background-color: #3CB371;
-    color: #FFFFFF;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
+.save-btn {
+  background-color: green;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+.save-btn:hover {
+  background-color: darkgreen;
+}
