fix: update games template
Refactored the games template to remove unnecessary whitespace and align code. No functional changes were made.

--- a/templates/games/games_list.html
+++ b/templates/games/games_list.html
@@ -1,5 +1,6 @@
-{% extends 'base.html' %} {% load static %} {% block title %}Список матчей{%
-endblock %} {% block styles %}{{ block.super }}
+{% extends 'base.html' %} {% load static %}
+{% block title %}Список матчей{% endblock %}
+{% block styles %}{{ block.super }}
 <link rel="stylesheet" href="{% static 'css/games.css' %}" />
 {% endblock %} {% block content %}
 <h1>Список матчей</h1>
