--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,41 +1,29 @@
-* {
-    box-sizing: border-box;
-    font-family: Arial, sans-serif;
-  }
+.mian-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	background-color: #282828;
+	color: #fff;
+	font-family: 'Montserrat', sans-serif;
+}
 
-  .container {
-    margin: 0 auto;
-    max-width: 600px;
-    text-align: center;
-  }
+.main-h1 {
+	text-align: center;
+	font-size: 3rem;
+	margin-bottom: 3rem;
+}
 
-  h1 {
-    font-size: 3em;
-    margin-top: 50px;
-    margin-bottom: 50px;
-  }
-
-  .buttons {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .title-btn, .team-btn, .game-btn, .table-btn {
-    display: inline-block;
-    margin: 10px;
-    padding: 20px 30px;
-    border-radius: 10px;
-    font-size: 1.5em;
-    text-align: center;
-    text-decoration: none;
-    color: #fff;
-    background-color: #b22222;
-    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
-    transition: all 0.3s ease;
-  }
-
-  .title-btn:hover, .team-btn:hover, .game-btn:hover, .table-btn:hover {
-    transform: scale(1.1);
-  }
+#ball {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: rgb(6, 92, 6);
+}
+body {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
