fix: add link to game details page in games list
Added an onclick event to the "Подробнее" button in the games list view. Now, when a user clicks on the button, it redirects them to the details page for that specific game. The link is created using the game's ID and the endpoint /games/game_id/. This change improves user experience by providing a direct link to the details page, instead of forcing the user to search for the game in the list again.

--- a/templates/games/games_list.html
+++ b/templates/games/games_list.html
@@ -24,7 +24,7 @@
       <td>{{ game.main_judge }}</td>
       <td>{{ game.result|default_if_none:"-" }}</td>
       <td>
-        <button class="details-button" data-game-id="{{ game.id }}">
+        <button class="details-button" data-game-id="{{ game.id }}" onclick="window.location.href='/games/{{ game.id }}/'">
           Подробнее
         </button>
         {% csrf_token %}
