--- a/templates/table.html
+++ b/templates/table.html
@@ -1,32 +1,7 @@
-{% extends 'base.html' %} {% block title %}Турнирная таблица{% endblock %}
+{% extends 'base.html' %} {% load static %}
+{% block title %}Турнирная таблица{% endblock %}
 {% block styles %} {{ block.super }}
-<style>
-  table {
-    border-collapse: collapse;
-    width: 100%;
-    margin: 20px auto;
-  }
-
-  th,
-  td {
-    border: 1px solid black;
-    padding: 8px;
-    text-align: center;
-  }
-
-  th {
-    background-color: #eee;
-  }
-
-  tr:nth-child(even) {
-    background-color: #f2f2f2;
-  }
-
-  .place {
-    font-weight: bold;
-    font-size: 1.2em;
-  }
-</style>
+<link rel="stylesheet" type="text/css" href="{% static 'css/table.css' %}" />
 {% endblock %} {% block content %}
 <h1>Турнирная таблица</h1>
 <table>
