--- a/templates/titles/title.html
+++ b/templates/titles/title.html
@@ -8,10 +8,10 @@
   <form id="title-form">
     {% csrf_token %}
     <label for="name">Название:</label>
-    <input type="text" id="name" name="name" value="{{ title.name }}" />
+    <input type="text" id="name" name="name" value="{{ title.name }}" {% if not user.is_staff %} disabled {% endif %}/>
     <br />
     <input type="hidden" id="title-id" name="title_id" value="{{ title.pk }}" />
-    <input type="submit" value="Сохранить" class="save-btn" />
+    <input type="submit" value="Сохранить" class="save-btn"{% if not user.is_staff %} hidden {% endif %}/>
   </form>
 </div>
 {% endblock %} {% block scripts %} {{ block.super }}
