refactor: added disabled fields and hidden button to team form for non-admin users.
The changes in this commit disable certain fields in the team form for non-admin users. Specifically, the 'name', 'country', 'city', 'coach', 'points', and 'games-count' fields are disabled if the user is not an admin. Additionally, the 'Сохранить' (Save) button is hidden for non-admin users. These changes were made to limit the ability of non-admin users to modify team information.

--- a/templates/teams/teams_list.html
+++ b/templates/teams/teams_list.html
@@ -18,7 +18,7 @@
         <a href="{% url 'teams-detail' team.id %}">
           <button>Подробнее</button>
         </a>{% csrf_token %}
-        <button class="delete-btn" onclick="confirmDelete('{{ team.id }}')">
+        <button class="delete-btn" onclick="confirmDelete('{{ team.id }}')" {% if not user.is_staff %} hidden {% endif %}>
           Удалить
         </button>
       </td>
