--- a/templates/titles/titles_list.html
+++ b/templates/titles/titles_list.html
@@ -17,7 +17,7 @@
       <td>
         <a class="button" href="/titles/{{ title.id }}">Подробнее</a>
         {% csrf_token %}
-        <button class="button delete-button" data-title-id="{{ title.id }}" {% if not user.is_staff %} hidden {% endif %}w>
+        <button class="button delete-button" data-title-id="{{ title.id }}" {% if not user.is_staff %} hidden {% endif %}>
           Удалить
         </button>
       </td>
