--- a/templates/games/games_list.html
+++ b/templates/games/games_list.html
@@ -28,7 +28,7 @@
           Подробнее
         </button>
         {% csrf_token %}
-        <button class="delete-button" data-game-id="{{ game.id }}">
+        <button class="delete-button" data-game-id="{{ game.id }}" {% if not user.is_staff %} hidden {% endif %}>
           Удалить
         </button>
       </td>
