--- a/templates/base.html
+++ b/templates/base.html
@@ -108,6 +108,9 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'table' %}">Таблица</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'chat' %}">Чат</a>
+            </li>
           </ul>
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
