--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -1,58 +1,58 @@
 .chat-container {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-  }
+  width: 100%;
+  margin: auto;
+}
 
-  .chat-header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-  }
+.chat-header {
+  background-color: #f2f2f2;
+  padding: 10px;
+}
 
-  .chat-header h2 {
-    margin: 0;
-  }
+.chat-header h2 {
+  margin: 0;
+  font-size: 28px;
+}
 
-  .messages-container {
-    flex: 1;
-    overflow-y: scroll;
-    padding: 10px;
-  }
+.messages-container {
+  height: 400px;
+  overflow-y: scroll;
+  padding: 10px;
+  border: 1px solid #ccc;
+}
 
-  .messages-container ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
+.messages-container ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 
-  .message {
-    margin-bottom: 10px;
-  }
+.messages-container li {
+  margin-bottom: 10px;
+}
 
-  .message .username {
-    font-weight: bold;
-  }
+.messages-container li span {
+  font-weight: bold;
+}
 
-  .input-container {
-    display: flex;
-    padding: 10px;
-  }
+.input-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
 
-  #message-input {
-    flex: 1;
-    margin-right: 10px;
-    padding: 5px;
-  }
+#message-input {
+  flex-grow: 1;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
 
-  #send-button {
-    background-color: #333;
-    color: #fff;
-    border: none;
-    padding: 5px 10px;
-    cursor: pointer;
-  }
-
-  #send-button:hover {
-    background-color: #555;
-  }
+#send-button {
+  padding: 10px;
+  background-color: #4CAF50;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
