feat: Add form validation to game creation script
Add condition to check that two selected teams are not the same
Add condition to check that the result is in the format "number-number"
Add condition to set result as None if the match date is in the future
Add condition to check that the judge name contains only letters and spaces

--- a/templates/games/game_create.html
+++ b/templates/games/game_create.html
@@ -35,7 +35,7 @@
     </div>
     <div class="form-group">
       <label for="result-input">Результат матча</label>
-      <input type="text" id="result-input" name="result" />
+      <input type="text" id="result-input" name="result" placeholder="0-0"/>
     </div>
     <button type="submit">Создать матч</button>
   </form>
