--- a/templates/titles/title_create.html
+++ b/templates/titles/title_create.html
@@ -11,4 +11,6 @@
     <input type="submit" value="Сохранить" class="save-btn" />
   </form>
 </div>
-{% endblock %} {% block scripts %} {{ block.super }} {% endblock %}
+{% endblock %} {% block scripts %} {{ block.super }}
+<script src="{% static 'js/title_create.js' %}"></script>
+{% endblock %}
