feat: Add user check to delete buttons
Added a check to the delete buttons for games, teams, and titles to hide the button if the user is not a staff member or if the user does not own the game, team, or title.

--- a/templates/games/games_list.html
+++ b/templates/games/games_list.html
@@ -28,7 +28,7 @@
           Подробнее
         </button>
         {% csrf_token %}
-        <button class="delete-button" data-game-id="{{ game.id }}" {% if not user.is_staff %} hidden {% endif %}>
+        <button class="delete-button" data-game-id="{{ game.id }}" {% if not user.is_staff  and game.user_id != request.user.id %} hidden {% endif %}>
           Удалить
         </button>
       </td>
