--- a/templates/teams/teams_list.html
+++ b/templates/teams/teams_list.html
@@ -18,7 +18,7 @@
         <a href="{% url 'teams-detail' team.id %}">
           <button>Подробнее</button>
         </a>{% csrf_token %}
-        <button class="delete-btn" onclick="confirmDelete('{{ team.id }}')" {% if not user.is_staff %} hidden {% endif %}>
+        <button class="delete-btn" onclick="confirmDelete('{{ team.id }}')" {% if not user.is_staff  and team.user_id != request.user.id %} hidden {% endif %}>
           Удалить
         </button>
       </td>
