--- a/templates/games/game.html
+++ b/templates/games/game.html
@@ -16,7 +16,7 @@
       id="date_of_the_match"
       name="date_of_the_match"
       value="{% if game.date_of_the_match %}{{ game.date_of_the_match|date:'Y-m-d' }}{% endif %}"
-      {% if not user.is_staff %} disabled {% endif %}
+      {% if not user.is_staff and game.user_id != request.user.id %} disabled {% endif %}
     />
 
     <label for="main_judge">Главный судья:</label>
@@ -25,10 +25,10 @@
       id="main_judge"
       name="main_judge"
       value="{{ game.main_judge|default:'' }}"
-      {% if not user.is_staff %} disabled {% endif %}
+      {% if not user.is_staff and game.user_id != request.user.id %} disabled {% endif %}
     />
     <label for="team1">Команда 1:</label>
-    <select id="team1" name="team1" {% if not user.is_staff %} disabled {% endif %}>
+    <select id="team1" name="team1" {% if not user.is_staff and game.user_id != request.user.id %} disabled {% endif %}>
       {% for team in teams %} {% if game.teams.all.0.id == team.id %}
       <option value="{{ team.id }}" selected>{{ team.name }}</option>
       {% else %}
@@ -37,7 +37,7 @@
     </select>
 
     <label for="team2">Команда 2:</label>
-    <select id="team2" name="team2" {% if not user.is_staff %} disabled {% endif %}>
+    <select id="team2" name="team2" {% if not user.is_staff and game.user_id != request.user.id %} disabled {% endif %}>
       {% for team in teams %} {% if game.teams.all.1.id == team.id %}
       <option value="{{ team.id }}" selected>{{ team.name }}</option>
       {% else %}
@@ -52,9 +52,9 @@
       name="result"
       value="{{ game.result|default:'' }}"
       placeholder="0-0"
-      {% if not user.is_staff %} disabled {% endif %}
+      {% if not user.is_staff and game.user_id != request.user.id %} disabled {% endif %}
     />
-    <button type="submit" id="save-btn" {% if not user.is_staff %} hidden {% endif %}>Сохранить</button>
+    <button type="submit" id="save-btn" {% if not user.is_staff and game.user_id != request.user.id %} hidden {% endif %}>Сохранить</button>
   </form>
 </div>
 {% endblock %} {% block scripts %}{{ block.super }}
