fix: url for list of chats

--- a/templates/base.html
+++ b/templates/base.html
@@ -125,7 +125,7 @@
                     <a class="dropdown-item" href="{% url 'chat' %}">Создать чат</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="{% url 'chats' %}"
+                    <a class="dropdown-item" href="{% url 'chats-list' %}"
                       >Список чатов</a
                     >
                   </li>
