feat: Add registration validation and jQuery script
This commit adds client-side validation to the registration form in the register.html template by using the jQuery library. It also adds a register.js script to handle the validation logic. In addition, the error message is now passed to the script via a hidden input field with an "error" id.

The views.py file is also updated to remove the password confirmation check in case of a password mismatch, as it is now handled in the client-side validation.

--- a/templates/register.html
+++ b/templates/register.html
@@ -40,9 +40,8 @@
     </form>
     <br />
     <a href="{% url 'login' %}">Уже зарегистрированы? Войти</a>
-    {% if error %}
-    <script>
-      alert("{{ error }}");
-    </script>{% endif %}
+    <input type="text" class="error" id="error" hidden value="{{ error }}">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="{% static 'js/register.js' %}"></script>
   </body>
 </html>
